fix some warning messages in Controller